<resources>
    <string name="app_name" translatable="false">Adhesive</string>
    <string name="loginmenu_Welcome">Welcome!</string>
    <string name="loginmenu_Desc">Welcome to adhesive, where all brands have stories to tell</string>
    <string name="loginmenu_loginbutton">Login Here &lt;</string>
    <string name="loginmenu_registerbutton">Register Here ></string>
    <string name="loginmenu_loginbutton_desc">Already have an account?</string>
    <string name="loginmenu_registerbutton_desc">Don\'t have an account?</string>
    <string name="login_Title">Login</string>
    <string name="login_Desc">Login using your credentials below</string>
    <string name="login_emailHint" translatable="false">Email</string>
    <string name="login_passwordHint" translatable="false">Password</string>
    <string name="login_problems">Having problems loging in?</string>
    <string name="login_donthaveaccount">Dont have an Account?</string>
    <string name="register_title">Register</string>
    <string name="register_desc">Register using the fields below:</string>
    <string name="register_name">Name</string>
    <string name="register_Email" translatable="false">Email</string>
    <string name="register_Password" translatable="false">Password</string>
    <string name="register_sex_male">Male</string>
    <string name="register_sex_feminine">Feminine</string>
    <string name="register_datanascimento">Birthday</string>
    <string name="register_registerbutton">Register!</string>
    <string name="register_alreadyhaveaccount">Already have an account?</string>
    <string name="login_problems_button">Click Here</string>
    <string name="login_missingfields_title">Empty fields detected</string>
    <string name="login_missingfields_message">Check your email / password for blank fields and try again.</string>
    <string name="login_missingfield_positive">Close</string>
    <string name="login_wrongPasswordEmail_Message">Wrong Password/Email try again</string>
    <string name="login_wrongPasswordEmail_Title">Error Loging in</string>
    <string name="login_wrongPasswordEmail_Postive" translatable="false">Ok!</string>
    <string name="login_loadingpopup_title">Log In!</string>
    <string name="login_loadingpopup_message">Please waiting, check credentials</string>
    <string name="register_dialogmissingitems_title">Empty Fields detected</string>
    <string name="register_dialogmissingitems_message">Check for empty fields and try again.</string>
    <string name="register_dialogmissingitems_positive" translatable="false">Ok</string>
    <string name="register_progressTitle">Registering…</string>
    <string name="register_progressMessage">Creating Account</string>
    <string name="register_failed_title">Error Registering</string>
    <string name="register_failed_message">Error Creating Account, check details and try again</string>
    <string name="register_failed_positive" translatable="false">Ok</string>
    <string name="dialog_error_Title_4">No Network</string>
    <string name="dialog_error_Message_4">Check you internet connection and try again.</string>
    <string name="dialog_error_Positive_4" translatable="false">Ok!</string>
    <string name="dialog_error_Title_1">Missing Fields</string>
    <string name="dialog_error_Message_1">Check for missing fields and try again</string>
    <string name="dialog_error_Positive_1" translatable="false">Ok</string>
    <string name="dialog_error_Title_2">Incorrect Email</string>
    <string name="dialog_error_Message_2">Your Email is incorrect try again</string>
    <string name="dialog_error_Positive_2" translatable="false">Ok!</string>
    <string name="dialog_error_Title_7">Email already in use</string>
    <string name="dialog_error_Message_7">Email already in use, login or recover your acount in the login screen</string>
    <string name="dialog_error_Positive_7" translatable="false">Ok</string>
    <string name="menu_main_initial">Home</string>
    <string name="main_menu_gallery">Gallery</string>
    <string name="main_menu_contacts">Contacts</string>
    <string name="main_menu_settings">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dialog_error_Title_8">No user found</string>
    <string name="dialog_error_Message_8">No user found with that email,check your email and try again</string>
    <string name="dialog_error_Positive_8" translatable="false">Ok</string>
    <string name="dialog_error_Title_3">Server Error</string>
    <string name="dialog_error_Message_3">Server Encountered an error, try again later</string>
    <string name="dialog_error_Positive_3" translatable="false">Ok</string>
    <string name="dialog_error_Title_6">Invalid Password</string>
    <string name="dialog_error_Message_6">Password Doesn\'t macth with our records, try again</string>
    <string name="dialog_error_Positive_6" translatable="false">Ok</string>
    <string name="dialog_error_Title_5">Invalid Session</string>
    <string name="dialog_error_Message_5">Your Session token was invalid,or logged in on another device, log in again,</string>
    <string name="dialog_error_Positive_5" translatable="false">Ok</string>
    <string name="fragment_home_text_1">"We are a Branding + Digital studio that works, in close proximity to partners, companies and consumers, brands that communicate stories with soul and in personalized printed and digital experiences. "</string>
    <string name="fragment_home_text_2">It is formed by a passionate and attentive team, adjustable to the objectives and budget of each project, working in different business sectors and demographic contexts.</string>
    <string name="settings_account_title">Account</string>
    <string name="settings_account_changepersonaldata">Change Email</string>
    <string name="settings_account_changePassword">Change Password</string>
    <string name="settings_account_logout">Log Out</string>
    <string name="settings_account_deactivate">Deactivate Account</string>
    <string name="settings_application_title">Application</string>
    <string name="settings_application_theme">Theme</string>
    <string name="settings_legal_title">Legal Information</string>
    <string name="settings_legal_OpenSourceLicenses">Open Souce Licenses</string>
    <string name="settings_legal_closedsource">Closed Source Licenses</string>
    <string name="settings_legal_privacy">Privacy statement</string>
    <string name="dialog_error_Title_13">LogOut Failed</string>
    <string name="dialog_error_Message_13">Error loggin you out, try again,</string>
    <string name="dialog_error_Positive_13" translatable="false">Ok</string>
    <string name="dialog_logout_title">Are you sure?</string>
    <string name="dialog_logout_message">Are you sure you want to logout?</string>
    <string name="dialog_logout_positive">Yes</string>
    <string name="dialog_logout_negative">No</string>
    <string name="gallery_project1_title" translatable="false">C.M Do Barreiro</string>
    <string name="gallery_project1_Message">Creation of brand and corporate identity, creative concept and graphic image of campaign, graphic design of communication pieces and merchandising to support campaigns, creation of online presence of the event</string>
    <string name="gallery_moreinfo">More Info +</string>
    <string name="gallery_project2_title" translatable="false">Grupo Medinfar</string>
    <string name="gallery_project2_message">UX Design and implementation of E-detailings for medical information delegates</string>
    <string name="gallery_project3_title" translatable="false">Herdade Dos Outeiros Altos</string>
    <string name="gallery_project3_message">Brand creation, institutional communication, wine label design and online brand presence.</string>
    <string name="gallery_project4_title" translatable="false">Progenie Engineering</string>
    <string name="gallery_project4_message">Brand redesign, creation of institutional communication and online brand presence.</string>
    <string name="gallery_project5_title" translatable="false">Grupo Medinfar</string>
    <string name="gallery_project5_message">Brand creation and label design</string>
    <string name="logout_title">Log Out</string>
    <string name="logout_message">Logging you out, please wait…</string>
    <string name="gallery_client">Client:</string>
    <string name="gallery_project">Project:</string>
    <string name="gallery_Services">Services:</string>
    <string name="gallery_project1_services">Brand Design &amp; Strategy, Print Design, Interactive Design &amp; Social Media</string>
    <string name="gallery_project2_services">UX Design, Mobile Application Implementation</string>
    <string name="gallery_project3_services" translatable="false">Brand Design, Print Design, Package Design, UX Design, Desktop + Mobile Implementation, Content Management System, Social Media</string>
    <string name="gallery_project4_services" translatable="false">Brand Design, Print Design, UX Design, Desktop + Mobile Implementation, SEO Consulting, Content Management System, Social Media</string>
    <string name="gallery_project5_services" translatable="false">Brand Design &amp; Package Design</string>
    <string name="gallery_projectDetails">Project details</string>
    <string name="gallery_projectGallery">Project Gallery</string>
    <string name="settings_legal_userAgreement">End User License</string>
    <string name="UserAgreementMessage" translatable="false">End-User License Agreement (EULA) of Adhesive \n This End-User License Agreement (\"EULA\") is a legal agreement between you and Adhesive\n This EULA agreement governs your acquisition and use of our Adhesive software (\"Software\") directly from Adhesive or indirectly through a Adhesive authorized reseller or distributor (a \"Reseller\").\n Please read this EULA agreement carefully before completing the installation process and using the Adhesive software. It provides a license to use the Adhesive software and contains warranty information and liability disclaimers.\n This EULA agreement shall apply only to the Software supplied by Adhesive herewith regardless of whether other software is referred to or described herein. The terms also apply to any Adhesive updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply.\n\n License Grant\n \tAdhesive hereby grants you a personal, non-transferable, non-exclusive licence to use the Adhesive software on your devices in accordance with the terms of this EULA agreement.\n \tYou are permitted to load the Adhesive software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the Adhesive software.\n \tYou are not permitted to:\n \t\tEdit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things \t\tReproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose \t\tAllow any third party to use the Software on behalf of or for the benefit of any third party \t\tUse the Software in any way which breaches any applicable local, national or international law \t\tuse the Software for any purpose that Adhesive considers is a breach of this EULA agreement</string>
    <string name="UserAgreementTitle">End User License</string>
    <string name="UserAgreementPositive" translatable="false">Ok</string>
    <string name="PrivacyStatementTitle">Privacy Statement</string>
</resources>